# amhe-projekt-harmonogrowanie-czasu-pracy

./: .gitignore  Makefile  README.md  all.sh  architektura.odt  pyproject.toml  report.sh  run.sh  setup.sh  test.sh
amhe/: __init__.py
amhe/analysis/: __init__.py  gantt.py  plots.py  stats.py  tables.py
amhe/baseline/: __init__.py  cpsat.py
amhe/data/: __init__.py  generator.py
amhe/experiments/: __init__.py  run.py  scenarios.py
amhe/model/: __init__.py  constraints.py  labor_law.py  objectives.py  schedule.py
amhe/optim/: __init__.py  local_search.py  memetic.py  nsga2.py  operators.py
amhe/realtime/: __init__.py  reopt.py
amhe/repair/: __init__.py  repair.py
report/: raport.tex  references.bib
tests/: test_analysis.py  test_constraints.py  test_cpsat.py  test_generator.py  test_memetic.py  test_nsga2.py  test_objectives.py  test_operators.py  test_reopt.py  test_repair.py  test_schedule.py
